# alpha_tui

./: Cargo.toml  Doxyfile  LICENSE  LICENSE-MIT  PROJECT_ISSUES_ANALYSIS.md  README-UPDATED.md  generate_syscalls.py  rustdoc.toml
.github/workflows/: release.yml
docs/: interface_and_usage.md  rustdoc_setup.md
examples/programs/: syscall_hello_world_demo.alpha  syscall_input_demo.alpha
src/: base.rs  cli.rs
src/app/: content.rs  mod.rs
src/app/commands/: load.rs
src/app/ui/: syntax_highlighting.rs
src/instructions/: mod.rs  parsing.rs  syscalls.rs  tests.rs
src/runtime/: error_handling.rs  memory_config.rs  mod.rs
