[package]
name = "alpha_tui"
version = "1.8.1"
edition = "2021"
description = "A runtime environment and debugger for Alpha-Notation used in Systemnahe Informatik lectures"
documentation = "https://lmh01.github.io/alpha_tui/docs/"
repository = "https://github.com/lmh01/alpha_tui"
readme = "README.md"
license = "MIT OR GPL-3.0"
keywords = ["tui", "debugger", "alpha-notation", "runtime", "interpreter"]
categories = ["command-line-utilities", "development-tools::debugging"]
authors = ["LMH01 <lmh01@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ratatui = { version = "0.26.3", features = [
    "all-widgets",
    "serde",
] }
crossterm = { version = "0.27", features = ["events"] }
clap = { version = "4.3", features = ["derive", "color"] }
thiserror = "1"
miette = { version = "7.2", features = ["fancy"] }
text_align = "0.3"
anyhow = "1"
trie-rs = "0.3"

# serialization, used for memory config file
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# used to load theme file from correct location
directories = "5"
libc = "1.0.0-alpha.1"

[dev-dependencies]
assert_cmd = "2"
[build-dependencies]
regex = "1.11.1"
